--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             and data-driven quality practices.</p>
           <div class="hero__cta">
             <a class="btn btn--primary" href="#projects">View Projects</a>
-            <a class="btn" href="/assets/SharonCaphonaDevanayagam_QA_Resume.pdf" download>Download Resume</a>
+            <a class="btn" href="./assets/SharonCaphonaDevanayagam_QA_Resume.pdf" download>Download Resume</a>
           </div>
           <ul class="hero__meta">
             <li>Manual & Automation Testing</li>
