update the path of image

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </ul>
         </div>
         <div class="hero__image">
-          <img src="/assets/Sharon Caphona Devanayagam.jpg" alt="Sharon Caphona Devanayagam" class="profile-photo">
+          <img src="./assets/Sharon Caphona Devanayagam.jpg" alt="Sharon Caphona Devanayagam" class="profile-photo">
         </div>
       </div>
     </section>
